--- a/package.json
+++ b/package.json
@@ -1,74 +1,75 @@
 {
-  "name": "resttful-api",
-  "version": "1.0.0",
-  "description": ".",
-  "main": "app.js",
+  "name": "restful-redux",
+  "description": "Redux App",
   "scripts": {
+    "start": "run-p start:dev server",
     "server": "nodemon server/app.js",
-    "start": "webpack-dev-server --port 9000 --config ./client/webpack.dev.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "run-p  server  start"
+    "start:dev": "webpack-dev-server --config ./client/webpack.config.dev.js --port 3000",
+    "build": "webpack --config ./client/webpack.config.prod.js",
+    "postbuild": "run-p server:build",
+    "server:build": "node server/app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PKiniesta/RESTful-ReactRedux.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PKiniesta/RESTful-ReactRedux/issues"
-  },
-  "homepage": "https://github.com/PKiniesta/RESTful-ReactRedux#readme",
   "dependencies": {
-    "config": "^3.2.2",
-    "express": "^4.17.1",
-    "mongoose": "^5.6.9",
-    "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1"
+    "axios": "^0.19.0",
+    "bcrypt": "^3.0.6",
+    "bootstrap": "4.3.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "cors": "",
+    "express": "",
+    "file-loader": "^4.2.0",
+    "html-loader": "^0.5.5",
+    "immer": "2.1.3",
+    "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "",
+    "prop-types": "15.7.2",
+    "react": "16.8.4",
+    "react-dom": "16.8.4",
+    "react-notifications": "^1.4.3",
+    "react-redux": "6.0.1",
+    "react-router-dom": "5.0.0",
+    "react-spinners": "^0.6.1",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0",
+    "redux-undo": "^0.6.1",
+    "reselect": "^4.0.0",
+    "svg-inline-loader": "^0.8.0",
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-preset-react-app": "7.0.2",
-    "bootstrap": "^4.3.1",
     "css-loader": "2.1.1",
     "cssnano": "4.1.10",
+    "enzyme": "3.9.0",
+    "nodemon": "",
     "eslint": "5.15.2",
     "eslint-loader": "2.1.2",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-react": "7.12.4",
-    "file-loader": "^3.0.1",
-    "html-loader": "^0.5.5",
+    "fetch-mock": "7.3.1",
     "html-webpack-plugin": "3.2.0",
-    "jquery": "^3.4.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "morgan": "^1.9.1",
-    "nodemon": "^1.19.1",
+    "mini-css-extract-plugin": "0.5.0",
+    "node-fetch": "^2.3.0",
     "npm-run-all": "4.1.5",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "popper.js": "^1.14.7",
     "postcss-loader": "3.0.0",
     "redux-immutable-state-invariant": "2.1.0",
-    "reload": "^3.0.1",
-    "rimraf": "2.6.3",
     "style-loader": "0.23.1",
     "webpack": "4.29.6",
     "webpack-bundle-analyzer": "3.1.0",
     "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.2.1",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^4.2.1"
+    "webpack-dev-server": "3.2.1"
+  },
+  "engines": {
+    "node": ">=8"
   },
   "nodemonConfig": {
     "restartable": "rs",
     "ignore": [
       "node_modules/**/node_modules"
     ],
-    "delay": "1500",
     "env": {
       "NODE_ENV": "development",
       "PORT": 5000
@@ -77,6 +78,9 @@
   "babel": {
     "presets": [
       "babel-preset-react-app"
+    ],
+    "plugins": [
+      "emotion"
     ]
   },
   "eslintConfig": {
@@ -97,7 +101,8 @@
     "env": {
       "browser": true,
       "node": true,
-      "es6": true
+      "es6": true,
+      "jest": true
     },
     "rules": {
       "no-debugger": "off",
