--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "restful-redux",
   "description": "Redux App",
   "scripts": {
-    "start": "run-p start:dev server",
+    "start": "run-p start:dev",
     "server": "nodemon server/app.js",
-    "start:dev": "webpack-dev-server --config ./client/webpack.config.dev.js --port 3000",
+    "start:dev": "webpack-dev-server --config ./client/webpack.config.dev.js --port 4000",
     "build": "webpack --config ./client/webpack.config.prod.js",
     "postbuild": "run-p server:build",
     "server:build": "node server/app.js"
@@ -33,6 +33,7 @@
     "redux-thunk": "2.3.0",
     "redux-undo": "^0.6.1",
     "reselect": "^4.0.0",
+    "slug": "^1.1.0",
     "svg-inline-loader": "^0.8.0",
     "webpack-merge": "^4.2.2"
   },
