--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restful-redux",
   "description": "Redux App",
   "scripts": {
-    "start": "run-p start:dev",
+    "start": "run-p start:dev server",
     "server": "nodemon server/app.js",
     "start:dev": "webpack-dev-server --config ./client/webpack.config.dev.js --port 4000",
     "build": "webpack --config ./client/webpack.config.prod.js",
@@ -16,6 +16,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cors": "",
     "express": "",
+    "fetch": "^1.1.0",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "immer": "2.1.3",
